- falsche Leerzeichen ausgebessert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1347 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -225,7 +225,7 @@ Prädikatenlogik.
   Seien $X,Y$ zwei nichtleere Mengen. Eine \highl{Teilmenge}
   $f\subseteq X\times Y\coloneqq \{(x,y)\colon x\in X \wedge y\in Y\}$ mit der
   Eigenschaft
-  \[\forall x \in X \,\forall y_1\in Y \,\forall y_2\in Y (((x,y_1)\in
+  \[\forall x \in X\forall y_1\in Y \forall y_2\in Y (((x,y_1)\in
   f\wedge (x,y_2)\in f)\Rightarrow y_1=y_2)\]
   heißt \highl{Abbildung} oder \highl{Funktion} von $X$ in $Y$.
 \end{definition}
@@ -358,8 +358,8 @@ Der Betrag einer reellen Zahl stellt den Abstand zur Null dar. Für $a \in \R$
 gilt:
 \[|a| \coloneqq
 \begin{cases}
-  a & \text{falls} \ a \geq 0 \\
-  -a & \text{falls} \ a<0
+  a & \text{falls } a \geq 0 \\
+  -a & \text{falls } a<0
 \end{cases}\]
 
 Man nennt $|a|$ den \highl[Betrag!absoluter]{absoluten Betrag} oder einfach
@@ -430,7 +430,7 @@ auch $S_2 \leq S_1$. Daraus folgt nun aber $S_1= S_2$.
 
 \begin{theorem}[\highl{Vollständigkeitsaxiom}] Jede
   nichtleere, nach oben beschränkte Menge reeller Zahlen besitzt ein
-  Supremum. $\forall M(M \subset \R \text{ n.\,o.\,b.} \ M \neq \emptyset
+  Supremum. $\forall M(M \subset \R \text{ n.\,o.\,b. } M \neq \emptyset
   \Rightarrow \sup M \in \R)$
 \end{theorem}
 
@@ -493,7 +493,7 @@ Dann heißt $s \in \R$ \highl{Infimum}\footnote{Schreibweise:
   \end{enumerate}
 \end{definition}
 \begin{beispiel}
-  $J\coloneqq\{I\colon I \subset \R \quad I \ \text{ist induktiv}\}$ entspricht der
+  $J\coloneqq\{I\colon I \subset \R,  I \text{ ist induktiv}\}$ entspricht der
   Menge aller induktiven Mengen aus $\R$.
 \end{beispiel}
 
@@ -528,7 +528,7 @@ dass $\N$  induktiv ist.
   \item $\forall n \in \N \colon n \geq 1$
   \item $\forall n,m \in \N \colon n+m \in \N \qquad n \cdot m \in \N$
   \item $\forall n > 1 \Rightarrow n-1 \in \N$
-  \item $\forall n \in \N \ \forall x \in \R \colon n<x<n+1 \Rightarrow x
+  \item $\forall n \in \N \forall x \in \R \colon n<x<n+1 \Rightarrow x
     \in \N$
   \item Jede nichtleere Teilmenge $A \subset \N$ enthält eine kleinste
     natürliche Zahl.
@@ -546,10 +546,10 @@ dass $\N$  induktiv ist.
   Da wir wissen, dass $\R$ nicht beschränkt ist, genügt es zu zeigen,
   dass es für jedes $a\geq 0$ aus $\R$ ein $n$ aus $\N$ mit der
   Eigenschaft $n\geq a$ gibt:
-  \[\forall a \in \R \,a \geq 0 \,\exists n \in \N\colon n \geq a\]
+  \[\forall a \in \R\text{ mit } a  \geq 0 \exists n \in \N\colon n \geq a\]
   Zum Beweis nehmen wir das Gegenteil an und müssen nach den Gesetzen
   der Logik auf einen Widerspruch stossen:
-  \[\exists a \in \R \,a \geq 0 \,\forall n \in \N\colon n < a\]
+  \[\exists a \in \R \text{ mit } a \geq 0\forall n \in \N\colon n < a\]
   Damit folgt, dass $\N$ beschränkt und nach dem Vollständigkeitsaxiom
   muss es ein $b=\sup\N \in \R$ geben. Sei nun $\varepsilon =
   \nicefrac{1}{2}$. Dann existiert ein $n_0 \in \N$ mit
@@ -745,8 +745,8 @@ nach dem Komma. Also gilt:
     Es gelten folgende Ungleichungen:
     \begin{description}
     \item[Cauchy-Schwartzsche Ungleichung]
-      \[\forall n \in \N \, \forall a_1 ,\ldots ,a_n \in \R
-      \, b_n \in \R \colon \left|\sum_{i=1}^n a_i b_i \right| \leq
+      \[\forall n \in \N \forall a_1 ,\ldots ,a_n \in \R
+      b_n \in \R \colon \left|\sum_{i=1}^n a_i b_i \right| \leq
       \sqrt{\sum_{i=1}^n a_i^2}\sqrt{\sum_{i=1}^n a_i^2}\]
       \textit{Beweis}: Sei $xy \leq
       \nicefrac{x^2}{2}+\nicefrac{y^2}{2}$ mit $\forall x,y \geq
@@ -865,8 +865,8 @@ Verallgemeinerung: $(a_n)_{n \geq n_0} \qquad n_0 \in \Z$}}.
   es ein $a \in X$ derart gibt, dass für  alle $\varepsilon > 0$ ein
   $n_{\varepsilon} \in \N$ mit der Eigenschaft $d(a,a_n)\leq
   \varepsilon$ für alle $n \geq n_{\varepsilon}$ existiert:
-  \[\exists a \in X \, \forall \varepsilon > 0 \, \exists n_{\varepsilon}
-  \in \N \, \forall n \geq n_{\varepsilon}\colon d(a,a_n)\leq \varepsilon\]
+  \[\exists a \in X \forall \varepsilon > 0  \exists n_{\varepsilon}
+  \in \N \forall n \geq n_{\varepsilon}\colon d(a,a_n)\leq \varepsilon\]
 \end{definition}
 Man sagt $(a_n)$ konvertiere gegen $a$. Das Gegenteil von konvergenten
 Folgen sind \emph{divergente Folgen\index{Folge!divergente}}.
@@ -887,7 +887,7 @@ liegen höchstens endlich viele Glieder der Folge $(a_n)$.
 Es ist zu zeigen: konvergiert $(a_n)$ gegen $a$ und $b$, so ist
 $a=b$.\\
 Sei $\varepsilon > 0$. Dann existieren $n_{\varepsilon}^{(1)},
-n_{\varepsilon}^{(2)} \in \N \colon d(a,a_n) \leq \nicefrac{\varepsilon}{2} \,
+n_{\varepsilon}^{(2)} \in \N \colon d(a,a_n) \leq \nicefrac{\varepsilon}{2}
 \text{ für } n \geq n_{\varepsilon}^{(1)}$ und $d(b,a_n) \leq
 \frac{\varepsilon}{2} \text{ für } n \geq n_{\varepsilon}^{(2)}$.
 Für $n \geq n_{\varepsilon} \coloneqq
@@ -942,7 +942,7 @@ Setze $\varepsilon \coloneqq \frac{1}{2} d(a,b) >0$. Dann ist
 \begin{definition}
   Sei $(X,d)$ ein metrischer Raum. Die Folge $(a_n) \subset X$ heißt
   genau dann \emph{beschränkt\index{Folge!beschränkte}}, wenn gilt:
-  \[\exists a \in X \, \exists M \geq 0 \, \forall n \in \R \colon d(a,a_n)
+  \[\exists a \in X \exists M \geq 0 \forall n \in \R \colon d(a,a_n)
   \leq M\]
 \end{definition}
 
@@ -964,11 +964,11 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
 \R$. Aus dem vorigen Abschnitt folgt:
 \begin{enumerate}
 \item $a \in \R$ ist Grenzwert von $(a_n) \subset \R \Leftrightarrow
-  \forall \varepsilon > 0 \, \exists n_{\varepsilon} \in \N \, \forall
+  \forall \varepsilon > 0 \exists n_{\varepsilon} \in \N \forall
   n \geq n_{\varepsilon}\colon |a_n-a| \leq \varepsilon$
 \item Eine konvergente Folge $(a_n) \subset \R$ ist beschränkt,
-  d.\,h. $\exists M \geq 0 \ \forall n \in \N \colon |a_n|\leq M$. Denn sei
-  $a = \lim a_n$. Dann existiert $M_1 \geq 0 \ \forall n \in \N\colon
+  d.\,h. $\exists M \geq 0 \forall n \in \N \colon |a_n|\leq M$. Denn sei
+  $a = \lim a_n$. Dann existiert $M_1 \geq 0 \forall n \in \N\colon
   |a-a_n| \leq M_1$\\
   $|a_n|=|(a_n-a)+a|\leq |a_n-a|+|a|\leq M_1+|a|$\\
   Für $M \coloneqq M_1+|a|$ gilt $|a_n|\leq M$  ($\forall n$).
@@ -1007,24 +1007,24 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
       b_n}=\frac{a}{b} \text{ falls } b \neq 0 \quad b_n \neq 0$
   \item $\lim |a_n|=|\lim a_n| =|a|$
   \item Vergleichssatz\\
-    $\exists m \in \N \ \forall n \geq m \ a_n
+    $\exists m \in \N \forall n \geq m\colon a_n
     \leq b_n \Rightarrow \lim a_n \leq \lim b_n \Rightarrow a \leq b$
-  \item $\exists m \in \N \, \forall n \geq m \, a_n \leq c_n \leq b_n
+  \item $\exists m \in \N  \forall n \geq m\colon a_n \leq c_n \leq b_n
     \wedge \lim a_n =\lim b_n \Rightarrow (c_n) \text{ konvergent und
     } \lim c_n = \lim a_n$
   \item $\lim \frac{a_1+\cdots +a_n}{n}=\lim a_n$
   \item $a_n>0 \Rightarrow \lim \sqrt[n]{a_1\ldots a_n}=\lim a_n$
-  \item $a_n>0 \, \lim \frac{a_{n+1}}{a_n} \text{ existiert }
+  \item $a_n>0, \lim \frac{a_{n+1}}{a_n} \text{ existiert }
     \Rightarrow \sqrt[n]{a_n}=\frac{\lim a_{n+1}}{\lim a_n}$
   \end{enumerate}
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
 \item Übung
-\item zu zeigen: $\forall \varepsilon >0 \ \exists n_{\varepsilon}
+\item zu zeigen: $\forall \varepsilon >0 \exists n_{\varepsilon}
   \in \N\forall n \geq n_{\varepsilon}\colon a_nb_n-ab=a_n(b_n-b)+(a_n-a)b$\\
   Nach \autoref{satz:beschraenkt} folgt, dass $(a_n)$ beschränkt ist,
-  d.\,h. $\exists M \geq 0 \, \forall n \in \N\colon |a_n| \leq M$. Sei
+  d.\,h. $\exists M \geq 0 \forall n \in \N\colon |a_n| \leq M$. Sei
   $\varepsilon > 0$. Dann existiert $n_0,n_1 \in \N$, so dass $|a-a_n|
   \leq \frac{\varepsilon}{2(|b|+1)}$ für $n \geq n_1$ und $|b-b_n|
   \leq \frac{\varepsilon}{2M}$ für $n \geq n_0$. Für $n \geq
@@ -1043,7 +1043,7 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
   \end{align*}
 \item Seien $b$ und $ b_n \neq 0$. Man zeigt zunächst: $\lim
   \nicefrac{1}{b_n}=\nicefrac{1}{\lim b}=\nicefrac{1}{b}$. Aus der
-  Tatsache, dass $\exists n_0 \, \forall n \geq n_0 \colon |b_n-b|\leq
+  Tatsache, dass $\exists n_0 \forall n \geq n_0 \colon |b_n-b|\leq
   \nicefrac{|b|}{2}$ für $b\neq 0$ folgt nach der Dreiecksungleichung,
   dass $|b|-|b_n| \leq |b_n-b| \leq \nicefrac{|b|}{2}$ für $n \geq
   n_0$. Daraus kann man nun für alle $n\geq n_0$ schließen, dass
@@ -1055,7 +1055,7 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
   \frac{\varepsilon \nicefrac{|b|^2}{2}}{\nicefrac{|b|}{2}|b|}=\varepsilon\]
   Damit ist nach Regel~2 $\lim \frac{a_n}{b_n}=\frac{\lim a_n}{\lim b_n}$.
 \item Sei $\varepsilon > 0$. Dann $\exists n_{\varepsilon} \in
-  \N\colon|a_n-a|< \varepsilon \ \forall n \geq n_{\varepsilon}$. Nach der
+  \N\colon|a_n-a|< \varepsilon \forall n \geq n_{\varepsilon}$. Nach der
   Dreiecksungleichung folgt für alle $n\geq n_\varepsilon\colon
   ||a_n|-|a||\leq |a_n-a| < \varepsilon \Rightarrow \lim |a_n|=|a|$.
 \item Annahme: $\lim a_n > \lim b_n$. Dann ist $\varepsilon =
@@ -1115,7 +1115,7 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
   \item $|q|>1$\\
     Annahme: $q^n$ ist konvergent. Dann ist nach
     \autoref{satz:beschraenkt} $q^n$ beschränkt, d.\,h. $\exists M >
-    0 \, \forall n \in \N \colon |q^n| \leq M \Rightarrow M \geq |q^n|=|q|^n
+    0 \forall n \in \N \colon |q^n| \leq M \Rightarrow M \geq |q^n|=|q|^n
     =\underbrace{(1+|q|-1)^n}_{>0} \geq 1+n(|q|-1) \geq n(|q|-1)$\\
     $\Rightarrow n \leq \frac{M}{|q|-1} \Rightarrow \N$ ist beschränkt
     \lightning
@@ -1129,8 +1129,8 @@ Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
     a_n = +\infty \qquad a_n \rightarrow \infty$\\} (=uneigentliche
   Konvergenz\index{Konvergenz!uneigentliche}) gegen $+\infty$ bzw.
   $-\infty$: Eine Folge $(a_n) \subset \R$ heißt \emph{bestimmt
-    divergent} gegen $+\infty \ (-\infty) \perdef \forall M
-  \in \R \, \exists n_M \in \N \, \forall n \geq n_M \colon a_n \geq M (a_n
+    divergent} gegen $+\infty\ (-\infty) \perdef \forall M
+  \in \R  \exists n_M \in \N  \forall n \geq n_M \colon a_n \geq M (a_n
   \leq M)$
 \end{remark}
 
@@ -1258,7 +1258,7 @@ als eine Verallgemeinerung des Begriffs Grenzwert verstanden werden.
   Sei $(X,d)$ ein metrischer Raum und $(a_n) \subset X$ eine
   Folge. Ein Punkt $a \in X$ heißt
   \emph{Häufungspunkt\index{Häufungspunkt}} von $(a_n)
-  \perdef \forall \varepsilon > 0 \ \forall m \in \N \
+  \perdef \forall \varepsilon > 0 \forall m \in \N
   \exists n>m\colon d(a,a_n) \leq \varepsilon$
 \end{definition}
 
@@ -1284,10 +1284,12 @@ $(a_n)$. Ausserhalb können ebenfalls unendlich viele liegen.
       \item[$\Rightarrow$] $\varepsilon_k\coloneqq\frac{1}{k}, k \in \N$\\
         $\left.
 	\begin{array}{lll}
-	  \varepsilon_1=1 \ m=1 \ \exists n_1>1\colon d(a,a_{n_1}) & \leq & 1\\
-	  \varepsilon_2=\frac{1}{2} \ m = n_1 \ \exists n_2 >n_1\colon d(a,a_{n_2}) & \leq & \frac{1}{2}\\
+	  \varepsilon_1=1\ m=1 \exists n_1>1\colon d(a,a_{n_1}) & \leq & 1\\
+	  \varepsilon_2=\frac{1}{2}\ m = n_1 \exists n_2 >n_1\colon
+	  d(a,a_{n_2}) & \leq & \frac{1}{2}\\
 	  \quad \vdots \qquad \vdots \qquad \vdots & & \vdots\\
-	  \varepsilon_k=\frac{1}{k} \ m=n_{k-1} \ \exists n_k > n_{k-1}\colon d(a,a_{n-k}) & \leq & \frac{1}{k}
+	  \varepsilon_k=\frac{1}{k}\ m=n_{k-1} \exists n_k > n_{k-1}\colon
+	  d(a,a_{n-k}) & \leq & \frac{1}{k}
 	\end{array}
 	\right\} \Rightarrow$\\
 	$\Rightarrow (a_{n_k})\subset (a_n)\colon\lim a_{n_k}=a$
@@ -1329,7 +1331,7 @@ Jede reelle Zahlenfolge $(a_n) \subset \R$ enthält eine monotone Teilfolge.
     a_{n_2+m_2}$. Setzen $n_3\coloneqq n_2+m_2 \Rightarrow
     n_3>n_2 \wedge a_{n_3}>a_{n_2}$\\
     $a_{n_1}<a_{n_2}<a_{n_3}<\ldots$
-  \item $M=\emptyset$, d.\,h. $\forall k \in \N \ \exists n \in \N \colon
+  \item $M=\emptyset$, d.\,h. $\forall k \in \N \exists n \in \N \colon
     a_{k+n}>a_k$ siehe 2. Fall
 \end{enumerate}
 \end{proof}
@@ -1373,7 +1375,7 @@ $\underline{\lim}\ a_n$ kleinster Häufungspunkt von $(a_n)$.
 \end{theorem}
 
 \textbf{Beweis} Nach dem \autoref{satz:bw} (Satz von Bolzano/Weierstrass) besitzt $(a_n)$ einen Häufungspunkt.
-\[\inf \{a_n\}\leq \overline{\lim} \ a_n \leq \sup \{a_n\}\]
+\[\inf \{a_n\}\leq \overline{\lim}\ a_n \leq \sup \{a_n\}\]
 \begin{enumerate}[1. Schr{i}tt]
   \item Zu zeigen: $a=\overline{\lim}\ a_n$ ist Häufungspunkt von $(a_n)$\\
     Setzen $b_n\coloneqq\sup \{a_k\colon k\geq n\}$ ist monoton fallend und nach unten beschränkt. Daraus folgt nach
@@ -1393,13 +1395,16 @@ $\underline{\lim}\ a_n$ kleinster Häufungspunkt von $(a_n)$.
 \subsection{Cauchyfolgen}
 \begin{definition}
 Sei $(X,d)$ ein metrischer Raum. Eine Folge $(a_n) \subset X$ heißt \emph{Cauchy\-fol\-ge}\index{Cauchyfolge} $\perdef$
-\[\forall \varepsilon > 0 \ \exists n_{\varepsilon}\in \N \ \forall n,m \geq n_{\varepsilon}\colon d(a_n,a_m)\leq \varepsilon\]
+\[\forall \varepsilon > 0 \exists n_{\varepsilon}\in \N \forall n,m \geq
+  n_{\varepsilon}\colon d(a_n,a_m)\leq \varepsilon\]
 \end{definition}
 
 \begin{theorem}
 \label{satz:cf}
-Sei $(X,d)$ ein metrischer Raum und $(a_n)\subset X$ eine konvergente Folge. Dann ist $(a_n)$ eine Cauchyfolge.\\
-\textbf{Beweis} Sei $a=\lim a_n$ und $\varepsilon>0$. Dann existiert $n_{\varepsilon}\in \N \ \forall n\geq n_{\varepsilon}
+Sei $(X,d)$ ein metrischer Raum und $(a_n)\subset X$ eine konvergente Folge.
+  Dann ist $(a_n)$ eine Cauchyfolge.\\
+\textbf{Beweis} Sei $a=\lim a_n$ und $\varepsilon>0$. Dann existiert
+  $n_{\varepsilon}\in \N \forall n\geq n_{\varepsilon}
 \colon d(a,a_n)\leq \frac{\varepsilon}{2}$ . Für $n,m\geq n_{\varepsilon}\colon d(a_n,a_m)\leq d(a_n,a)+d(a,a_m)=\frac{\varepsilon}{2}
 +\frac{\varepsilon}{2}=\varepsilon \Rightarrow a_n$ ist eine Cauchyfolge.\qed
 \end{theorem}
@@ -1421,7 +1426,7 @@ ist genau dann konvergent, wenn sie eine Cauchyfolge ist.
   \item["`$\Leftarrow$"'] Sei $(a_n)\subset \R$ eine
     Cauchyfolge. $(a_n)$ ist beschränkt für $\varepsilon=1$
     \begin{align*}
-      & \exists n_1\in \N \, \forall n,m >n_1 \colon&|a_n-a_m|\leq\varepsilon =1\\  
+      & \exists n_1\in \N \forall n,m >n_1 \colon&|a_n-a_m|\leq\varepsilon =1\\  
       &\Rightarrow |a_n|=|a_n-a_m+a_m|\leq |a_n-a_m|+|a_m|\leq 1+|a_m|
       & \text{ für } n,m\geq n_1
     \end{align*}
@@ -1472,7 +1477,7 @@ In $\R$ sind folgende Aussagen äquivalent:
     \end{array}
     \right\} \Rightarrow b_n-a_n\rightarrow 0$\\
     $n\geq m =|a_n-a_m|=a_n-a_m\leq b_m-a_m$\\
-    Sei $\varepsilon>0$. Dann $\exists m_{\varepsilon} \in \N \ m\geq m_{\varepsilon}\colon b_m-a_m\leq \varepsilon$\\
+    Sei $\varepsilon>0$. Dann $\exists m_{\varepsilon} \in \N\ m\geq m_{\varepsilon}\colon b_m-a_m\leq \varepsilon$\\
     $\Rightarrow \forall n,m \colon n\geq m \geq m_{\varepsilon}\Rightarrow |a_n-a_m|\leq \varepsilon$, d.\,h. $(a_n)$ ist
     Cauchyfolge.\\
     $\Rightarrow \lim a_n = s \in \R$\\
@@ -1598,7 +1603,7 @@ $\sum a_n$ ist konvergent, wenn  $\lim a_n=0$ ist.
 \begin{theorem}[Cauchykriterium\index{Cauchykriterium}]
 \label{satz:CKrit}
  $\sum a_n$ konvergent $\perdef$
-\[\forall \varepsilon >0 \ \exists n_{\varepsilon}\in \N \ \forall n>m>n_{\varepsilon}\colon\left|\sum_{k=m}^n a_k\right|
+\[\forall \varepsilon >0 \exists n_{\varepsilon}\in \N \forall n>m>n_{\varepsilon}\colon\left|\sum_{k=m}^n a_k\right|
 \leq \varepsilon\]
 \end{theorem}
 \textbf{Beweis}: $s_n-s_m=\sum_{k=m+1}^n a_k\quad \sum a_k$ konvergent
@@ -1665,7 +1670,7 @@ Reihe
 	Daraus folgt, dass $a_{n_k}$ nicht gegen 0 streben. Daher strebt auch $a_n$ nicht gegen 0. Nach \autoref{satz:konvkrit}
 	folgt, dass auch $\sum a_n$ divergiert.
       \item Sei $\alpha =\overline{\lim}\sqrt[n]{|a_n|}<1$. Wähle $\beta \colon\alpha<\beta <1, b_n\coloneqq \sup\{\sqrt[k]{|a_k|}\colon k\geq n\}$
-        Für $b_n$ gilt $\lim b_n=\alpha$. Wähle $\varepsilon_0\colon\alpha+\varepsilon_0<\beta$. Dann existiert ein $n_0 \in \N \ 
+        Für $b_n$ gilt $\lim b_n=\alpha$. Wähle $\varepsilon_0\colon\alpha+\varepsilon_0<\beta$. Dann existiert ein $n_0 \in \N
 	\forall n\geq n_0\colon\alpha -b_n|<\varepsilon_0$. Somit ist $-\varepsilon_0<\alpha -b_n<\varepsilon_0$ für $n\geq n_0
 	\Rightarrow b_n<\alpha +\varepsilon_0$ für $n\geq n_0$. Insobesondere gilt für $n=n_0\colon b_{n_0}<\alpha +\varepsilon_0<
 	\beta$, d.\,h. $\sqrt[k]{|a_k|}\leq b_{n_0}<\beta \quad \forall k\geq n_0 \Rightarrow |a_k|<\beta^k, k\geq n_0
@@ -1829,7 +1834,7 @@ Ferner gilt: $\sum_{k=1}^\infty a_{\pi(k)}=\sum_{k=1}^\infty a_k \qquad \forall 
 \begin{theorem}
 \textbf{Riemannsche Umordnungssatz\index{Umordnungssatz!Riemannsche}\index{Riemannsche Umordnungssatz}} Sei $\sum_1^\infty
 a_k$ bedingt konvergent. Dann 
-\[\forall S \in \R \ \exists \pi \colon\N\rightarrow\N \text{ Bijektion }\colon\sum_1^\infty a_{\pi(k)}=S\]
+\[\forall S \in \R \exists \pi \colon\N\rightarrow\N \text{ Bijektion }\colon\sum_1^\infty a_{\pi(k)}=S\]
 \end{theorem}
 \textbf{Beweis}: siehe Heuser S.\,197--199
 
@@ -1849,7 +1854,7 @@ konvergent und es gilt
 \textbf{Beweis}:
 \begin{enumerate}[1. Schr{i}tt]
   \item Zu zeigen ist, dass $\sum |p_n|$ konvergent ist. Nach dem Monotoniekriterium reicht es zu zeigen, dass
-    $\exists K \geq 0 \ \forall n \in \N \cup \{0\}\colon\sum_{k=0}^\infty |p_k|\leq K$.\\
+    $\exists K \geq 0 \forall n \in \N \cup \{0\}\colon\sum_{k=0}^\infty |p_k|\leq K$.\\
     Sei $n \in \N \Rightarrow \exists m \in \N \colon \sum_{k=0}^n |p_k|\leq (\sum_{k=0}^m |a_k|)(\sum_{k=0}^m |b_k|)$\\
     $\leq
     (\sum_0^\infty |a_k|)(\sum_0^\infty |b_k|)=:K$
@@ -1995,32 +2000,32 @@ Rechenregeln:
 \begin{theorem}
 \label{satz:e-d-stetig}
 Sei $D\subset X, f\colon D\rightarrow Y$. $f$ ist genau dann im Punkt $a\in D$ stetig, wenn:
-\[\forall \varepsilon >0 \ \exists \delta_{\varepsilon}(a)>0 \ \forall x \in D\colon d(x,a)<\delta_{\varepsilon}
+\[\forall \varepsilon >0 \exists \delta_{\varepsilon}(a)>0 \forall x \in D\colon d(x,a)<\delta_{\varepsilon}
 (a)\Rightarrow  \tilde{d}(f(x),f(a))<\varepsilon\]
 In Worten: $f(x)$ weicht beliebig wenig von $f(a)$ ab, falls nur $x$ hinreichend nahe bei $a$ liegt oder 
 zu jeder $\varepsilon$-Kugel $\stackrel{\circ}{B_{\varepsilon}}(f(a))$ existiert eine $\delta_{\varepsilon}$
 -Kugel relativ zu $D$ mit $f(\stackrel{\circ}{B_{\varepsilon}}\cap D)\subset \stackrel{\circ}{B_{\varepsilon}}
 (f(a))$.
-\[\forall \varepsilon >0 \ \exists \delta_{\varepsilon}>0\colon f(\stackrel{\circ}{B_{\delta_{\varepsilon}}}(a)
+\[\forall \varepsilon >0 \exists \delta_{\varepsilon}>0\colon f(\stackrel{\circ}{B_{\delta_{\varepsilon}}}(a)
 \cap D) \subset \stackrel{\circ}{B_{\varepsilon}}(f(a))\]
 \end{theorem}
 \textbf{Beweis}
 \begin{itemize}
   \item["`$\Rightarrow$"'] Voraussetzung: $\forall (x_n)\subset D\colon x_n\rightarrow a \Rightarrow f(x_n)
     \rightarrow f(a)$\\
-    zu zeigen: $\forall \varepsilon >0 \ \exists \delta_{\varepsilon} >0 \ \forall x\ in D\colon d(x,a)<
+    zu zeigen: $\forall \varepsilon >0 \exists \delta_{\varepsilon} >0 \forall x\ in D\colon d(x,a)<
     \delta_{\varepsilon}\Rightarrow \tilde{d}(f(x),f(a))<\varepsilon$\\
-    Der Beweis wird indirekt geführt. Annahme: $\exists \varepsilon >0 \ \forall \delta >0 \ \exists
+    Der Beweis wird indirekt geführt. Annahme: $\exists \varepsilon >0 \forall \delta >0 \exists
     x \in D\colon d(x,a)<\delta \wedge \tilde{d} (f(x),f(a))\geq \varepsilon$\\
-    Insbesondere gilt: $\forall n \in \N \ \exists x_n \in D\colon d(x_n,a)<\frac{1}{n} \wedge \tilde{d}(f(x_n),
+    Insbesondere gilt: $\forall n \in \N \exists x_n \in D\colon d(x_n,a)<\frac{1}{n} \wedge \tilde{d}(f(x_n),
     f(n))\geq \varepsilon \stackrel{n\rightarrow \infty}{\Longrightarrow} x_n \rightarrow a \wedge 
     f(x_n)\not\rightarrow f(a)$
    \lightning
   \item["`$\Leftarrow$"'] zu zeigen: $\forall (x_n) \subset D$ mit $x_n\rightarrow a$ gilt $f(x_n)
     \rightarrow f(a)$\\
     Sei $(x_n)\subset D$ mit $x_n\rightarrow a$ und $\varepsilon >0$. Nach Voraussetzung existiert ein
-    $\delta >0$, so dass $\tilde{d}(f(x),f(a))<\varepsilon \ \forall x \in D$ mit $d(x,a)<\delta$. Da
-    $x_n\rightarrow a$ gibt es ein $n_0\in \N$, so dass $d(x_n,a)<\delta \ \forall n\geq n_0
+    $\delta >0$, so dass $\tilde{d}(f(x),f(a))<\varepsilon \forall x \in D$ mit $d(x,a)<\delta$. Da
+    $x_n\rightarrow a$ gibt es ein $n_0\in \N$, so dass $d(x_n,a)<\delta \forall n\geq n_0
     \Rightarrow \tilde{d}(f(x_n),f(a))<\varepsilon$ für alle $n\geq n_0$.
 \end{itemize}
 \qed
@@ -2031,11 +2036,11 @@ Beweis: Sei $a\in \Q$. Zeige $\lim_{x\rightarrow a} f(x)=f(a)$
 \begin{enumerate}[1. F{a}ll]
 \item Sei $a>\sqrt{2}$ und $(x_n)\subset \Q$, so dass $x_n\rightarrow a$.\\
   Setze $\varepsilon \coloneqq a-\sqrt{2}>0$. Für $\varepsilon$ gibt es ein
-  $n_0\in \N$, so dass $|x_n-a| <\varepsilon \ \forall n\geq
+  $n_0\in \N$, so dass $|x_n-a| <\varepsilon \forall n\geq
   n_0$. Ferner gilt $x_n>\sqrt{2}$ für $n\geq n_0$, denn $-\varepsilon
   <x_n-a<\varepsilon$ für $n\geq n_0 \Rightarrow
   \underbrace{a-\varepsilon}_{\sqrt{2}} <x_n
-  \Rightarrow f(x_n)=1 \ \forall n\geq n_0$\\
+  \Rightarrow f(x_n)=1 \forall n\geq n_0$\\
   $\lim_{n\rightarrow \infty} f(x)=1=f(a)$
 \item Sei $a<\sqrt{2}$: analog
 \end{enumerate}
@@ -2057,7 +2062,7 @@ hat den Häufungspunkt $a$. $a$ selbst hat keinen Häufungspunkt.
   Sei $f\colon D\rightarrow Y, D\subset Y$ und $a\in X$ ein Häufungspunkt
   von $D$. Dann gilt:
   \[\lim_{x\rightarrow a} f(x)=c\Leftrightarrow \forall\varepsilon >0
-  \, \exists \delta >0\colon\forall x\in D \, d(x,a) <\delta \Rightarrow
+  \exists \delta >0\colon\forall x\in D\colon d(x,a) <\delta \Rightarrow
   \tilde{d}(f(x),c)<\varepsilon\]
 \end{theorem}
 \begin{proof}
@@ -2123,19 +2128,19 @@ konvergent $\Rightarrow \lim x_n \in A$.\\
     Annahme: $\exists (x_n)\subset A\colon(x_n) \text{ konvergent} \Rightarrow \lim x_n \notin A$\\
     $a\coloneqq \lim x_n$\\
     $\Rightarrow a \in X\backslash A$ offen, da $A$ nach Voraussetzung abgeschlossen.\\
-    $\Rightarrow \exists \varepsilon >0 \ \stackrel{o}{B_{\varepsilon}}(a)\subset X\backslash A$\\
+    $\Rightarrow \exists \varepsilon >0 \stackrel{o}{B_{\varepsilon}}(a)\subset X\backslash A$\\
     Da $x_n$ gegen $a$ strebt, existiert ein $n_0\in \N$, so dass $d(x_n,a)<\varepsilon$ für $n\geq n_0$\\
     $\Rightarrow x_n \in \stackrel{o}{B_{\varepsilon}}(a)$\textnormal{\lightning}
   \item["`$\Leftarrow$"'] Sei $\forall (x_n)\subset A\colon x_n \text{ konvergent} \Rightarrow \lim x_n \in A$\\
     Annahme: $A$ ist offen. Dann ist zu zeigen:
     \begin{align*}
       A \text{ abgeschlossen} & \Leftrightarrow & X\backslash A \text{ offen}\\
-      & \Leftrightarrow & \forall x \in X\backslash A \ \exists \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}
+      & \Leftrightarrow & \forall x \in X\backslash A \exists \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}
       (x)\subseteq X\backslash A\\
-      & \Leftrightarrow & \forall x \in X\backslash A \ \exists \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}
+      & \Leftrightarrow & \forall x \in X\backslash A \exists \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}
       (x)\cap A = \emptyset
     \end{align*}
-    $\Rightarrow \exists x_0 \in X\backslash A \ \forall \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}(x_0)
+    $\Rightarrow \exists x_0 \in X\backslash A \forall \varepsilon >0\colon\stackrel{o}{B_{\varepsilon}}(x_0)
     \cap A \neq \emptyset$\\
     Insbesondere existiert ein $x_n \in A \colon d(x_n,x_0)<\frac{1}{n}$\\
     $\stackrel{Voraussetzung}{\Longrightarrow}x_0=\lim x_n \in A$\textnormal{\lightning}
@@ -2195,7 +2200,7 @@ Seien $X,Y$ metrische Räume und $f\colon D\rightarrow Y$. Dann sind folgende Aus
 \begin{definition}
 Sei $X$ ein metrischer Raum. Eine Menge $K\subset X$ heißt genau dann \emph{kompakt\index{Menge!kompakte}},
 wenn jede Folge aus $K$ eine konvergente Teilfolge in $K$ enthält.
-\[\forall (x_n) \subset K \ \exists (x_{n_k})\subset (x_n)\colon\lim_{K\rightarrow \infty} x_{n_k}\in K\]
+\[\forall (x_n) \subset K \exists (x_{n_k})\subset (x_n)\colon\lim_{K\rightarrow \infty} x_{n_k}\in K\]
 \end{definition}
 
 \begin{theorem}
@@ -2203,7 +2208,7 @@ wenn jede Folge aus $K$ eine konvergente Teilfolge in $K$ enthält.
 \begin{enumerate}[(1)]
   \item Sei $K\subset X$ kompakt. Dann ist $K$ beschränkt und abgeschlossen.\\
     \textbf{Beweis}\textit{Beschränktheit} Annahme: $K$ ist nicht beschränkt.\\
-    $\Rightarrow \exists a \in K \ \forall n \in \N \ \exists x_n \in K\colon d(x_n,a)\geq n$\\
+    $\Rightarrow \exists a \in K \forall n \in \N \exists x_n \in K\colon d(x_n,a)\geq n$\\
     $\Rightarrow$ Es existiert keine konvergente Teilfolge $(x_{n_k})$ aus $(x_n)$\textnormal{\lightning}\\
     \textit{Abgeschlossenheit} Sei $(x_n)\subset K \colon x_n \rightarrow a\in X$ zu zeigen: $a\in K$\\
     $\stackrel{\text{kompakt}}{\Rightarrow} \exists \text{ Teilfolge} (x_{n_k})\subset X \colon\lim (x_{n_k})\in K$\\
@@ -2227,18 +2232,18 @@ Beispiele:
 \subsubsection{Gleichmässige Stetigkeit}
 \begin{definition}
 Sei $D\subset X, f\colon D\rightarrow Y$. $f$ heißt genau dann 
-\emph{gleichmässig stetig\index{stetig!gleichmässig}}, wenn:
-\[\forall \varepsilon >0 \ \exists \delta_{\varepsilon}>0 \ \forall x,y \in D\colon d(x,y)<\delta_{\varepsilon}
+\highl{gleichmässig stetig}, wenn:
+\[\forall \varepsilon >0 \exists \delta_{\varepsilon}>0 \forall x,y \in D\colon d(x,y)<\delta_{\varepsilon}
 \Rightarrow \tilde{d} (f(x),f(y))<\varepsilon\]
 \end{definition}
-Bemerkung: $f$ ist stetig auf $D \perdef \forall x\in D \ \forall \varepsilon >0 \ \exists \delta_{\varepsilon}
-(x)>0 \ \forall y\in D\colon d(x,y)<\delta_{\varepsilon}(x)\Rightarrow \tilde{d}(f(x),f(y))<\varepsilon$\\
+Bemerkung: $f$ ist stetig auf $D \perdef \forall x\in D \forall \varepsilon >0 \ \exists \delta_{\varepsilon}
+(x)>0 \forall y\in D\colon d(x,y)<\delta_{\varepsilon}(x)\Rightarrow \tilde{d}(f(x),f(y))<\varepsilon$\\
 Offenbar gilt: $f$ ist gleichmässig stetig auf $D\Rightarrow f$ stetig auf $D$. Die Umkehrung gilt im allgemeinen
 nicht.\\
 Beispiel: $D=]0,1]\subset \R =X=Y, f(x)=\frac{1}{x}$\\
 Es gilt, dass $f$ in $]0,1]$ stetig, aber nicht gleichmässig stetig ist.\\
 \textbf{Negation von gleichmässiger Stetigkeit} $f\colon D\rightarrow Y$ ist auf $D$ nicht gleichmässig stetig:
-\[\exists \varepsilon >0 \ \forall \delta_{\varepsilon}>0 \ \exists x_{\delta},y_{\delta}\in D\colon
+\[\exists \varepsilon >0 \forall \delta_{\varepsilon}>0 \exists x_{\delta},y_{\delta}\in D\colon
 |x_{\delta}-y_{\delta}|<\delta \wedge |f(x_{\delta})-f(y_{\delta})|\geq \varepsilon\]
 In unserem Fall sei $\varepsilon=1$. Für $\delta>0$ wählen wir $x_{\delta}=\frac{\min\{1,\delta\}}{1+\delta},
 y_{\delta}=\min\{1,\delta\}\in ]0,1]$\\
@@ -2261,7 +2266,7 @@ Sei $K\subset X$ kompakt und $f\colon K\rightarrow Y$ stetig. Dann gilt
 \begin{enumerate}[(1)]
   \item $f$ ist gleichmässig stetig auf $K$.\\
     \textbf{Beweis} Annahme: $f$ ist stetig, aber nicht gleichmässig stetig auf $K$\\
-    $\exists \varepsilon_0>0 \ \forall \delta >0 \ \exists x_{\delta},y_{\delta}\in K\colon d(x_{\delta},
+    $\exists \varepsilon_0>0 \forall \delta >0 \exists x_{\delta},y_{\delta}\in K\colon d(x_{\delta},
     y_{\delta})<\delta\wedge\tilde{d}(f(x_{\delta}),f(y_{\delta}))\geq \varepsilon_0$\\
     Insbesondere existiert für $\delta_n=\frac{1}{n}$ ein $x_n,y_n$ aus $K$ mit \\
     $d(x_n,y_n)<\frac{1}{n}
@@ -2290,7 +2295,7 @@ $f$ nimmt auf $K$ ihr Minimum an.\\
 \textbf{Beweis}: Für Maximum: Nach \autoref{satz:beschr-abg} und \autoref{satz:gleichm-stetig} wissen wir: Die Tatsache, dass
 $f$ stetig ist, impliziert, dass $f(K)$ beschränkt ist.
 \begin{align*}
-  M\coloneqq \sup_{x\in K} f(x)\in\R & \Rightarrow \forall n \in \N \ \exists x_n\in K\colon f(x_n)\leq M\leq f(x_n)+\frac{1}{n}\\
+  M\coloneqq \sup_{x\in K} f(x)\in\R & \Rightarrow \forall n \in \N \exists x_n\in K\colon f(x_n)\leq M\leq f(x_n)+\frac{1}{n}\\
   & \stackrel{K\text{~kompakt}}{\Rightarrow} \exists \text{Teilfolge} (x_{n_k})\subset (x_n)\colon x_{n_k}\rightarrow p\in K\\
   & \stackrel{f\text{~stetig}}{\Rightarrow} f(p)=\lim_{K\rightarrow \infty} f(x_{n+k})=M
 \end{align*}
@@ -2417,11 +2422,10 @@ $]a,\infty[$ ist \emph{kein} vollständiger metrischer Raum.
 
 \begin{theorem}[Banachscher
   Fixpunktsatz\index{Fixpunktsatz!Banachscher}]
-  Dieser Satz wird auch \emph{Prinzip der
-kontrahierenden Abbildung} genannt.\\
+  Dieser Satz wird auch \emph{Prinzip der kontrahierenden Abbildung} genannt.\\
 Sei $(X,d)$ ein vollständiger metrischer Raum und $f\colon X\rightarrow X$ eine \emph{kontrahierende Abbildung
 \index{Abbildung!kontrahierende}}, d.\,h.
-\[\exists 0\leq\alpha <1 \ \forall x,y\in X\colon d(f(x),f(y))\leq \alpha d(x,y)\]
+\[\exists 0\leq\alpha <1 \forall x,y\in X\colon d(f(x),f(y))\leq \alpha d(x,y)\]
 Dann gilt:
 \begin{enumerate}[(1)]
   \item $\exists!! a\in X\colon f(a)=a$\\
@@ -2447,7 +2451,7 @@ Dann gilt:
     & \leq \frac{\alpha^m}{1-\alpha}d(x_1,x_0)
     \end{align*}
     Also hat man $d(x_n,x_m)\leq \frac{\alpha^m}{1-\alpha}d(x_1,x_0)$ für $n>m$. Aus der Tatsache, dass $\alpha$
-    zwischen 0 und 1 liegt, folgt $\forall \varepsilon >0 \ \exists n_{\varepsilon}\in \N \ \forall n,m\geq
+    zwischen 0 und 1 liegt, folgt $\forall \varepsilon >0 \exists n_{\varepsilon}\in \N \ \forall n,m\geq
     n_{\varepsilon} \colon d(x_n,x_m)\leq \varepsilon$. Daher folgt weiter, dass $(x_n)$ eine Cauchyfolge ist. Weiterhin
     ist bekannt, dass $X$ vollständig ist. Dies bedingt, dass ein $a\in X$ existiert, für das $\lim x_n=a$ ist. Wegen
     der Dreiecksungleichung $|d(a,x_m)-d(x_m,x_n)|\leq d(a,x_n)$ ergibt sich für $n\rightarrow \infty$, dass
@@ -2497,9 +2501,9 @@ Sei $D\subset \R , f\colon D\rightarrow \R$ eine reelle Funktion, $a\in\R$ ist H
     den \emph{rechtsseitigen Grenzwert\index{Grenzwert!rechtsseitig}}.
   \item $\lim_{x\rightarrow a-0}f(x)=c\perdef \forall (x_n)\subset D\ x_n<a,x_n\rightarrow a\Rightarrow f(x_n)=c$ $f$ hat in $c$
     den \emph{linksseitigen Grenzwert\index{Grenzwert!linksseitig}}.
-  \item $\lim_{x\rightarrow a+0}f(x)=f(a)\perdef \forall \varepsilon >0 \ \exists \delta >0 \ \forall x \in D\colon 0\leq x-a<\delta
+  \item $\lim_{x\rightarrow a+0}f(x)=f(a)\perdef \forall \varepsilon >0\ \exists \delta >0 \ \forall x \in D\colon 0\leq x-a<\delta
     \Rightarrow |f(x)-f(a)|<\varepsilon$ $f$ ist \emph{linksseitig stetig\index{Stetigkeit!linksseitig}}.
-  \item $\lim_{x\rightarrow a-0}f(x)=f(a)\perdef \forall \varepsilon >0 \ \exists \delta >0 \ \forall x \in D\colon 0\leq a-x<\delta
+  \item $\lim_{x\rightarrow a-0}f(x)=f(a)\perdef \forall \varepsilon >0\ \exists \delta >0 \ \forall x \in D\colon 0\leq a-x<\delta
     \Rightarrow |f(x)-f(a)|<\varepsilon$ $f$ ist \emph{rechtsseitig stetig\index{Stetigkeit!rechtsseitig}}.
   \item $\lim_{x\rightarrow\infty} f(x)=c\perdef \forall (x_n)\subset D (x_n \rightarrow \infty \Rightarrow f(x_n)\rightarrow c)$
   \item $\lim_{x\rightarrow a} f(x)=\infty\perdef \forall (x_n)\subset D\\\{a\} (x_n \rightarrow a \Rightarrow f(x_n)\rightarrow \infty)$
@@ -2796,7 +2800,7 @@ Seien $x,y\in\R$:
 \begin{definition}
 Sei $D\subseteq \R, f\colon D\rightarrow\R$ eine reelle Funktion und $a\in D$ ein Häuf\-ungs\-punkt von $D$. $f$
 heißt genau dann differenzierbar in $a$, wenn gilt:
-\[\exists c \in\R \ \exists r\colon D\backslash\{a\}\rightarrow\R \text{ mit } \lim_{x\rightarrow a}
+\[\exists c \in\R \exists r\colon D\backslash\{a\}\rightarrow\R \text{ mit } \lim_{x\rightarrow a}
 \frac{r(x)}{x-a}=0\]
 \[\forall x \in D\colon f(x)=f(a)+c(x-a)+r(x)\]
 \end{definition}
@@ -2903,9 +2907,9 @@ Somit folgt: $\lim_{x\rightarrow a}f(x)=\lim(f(a)+f'(a)(x-a)+r(x))=\lim f(a)+\li
 Beispiele:
 \begin{enumerate}[(1)]
   \item $f(x)=\ln x\quad f'(x)=\frac{1}{x}$\\
-    Beweis: $f(x)=\ln x=g^{-1}(x)\, g(x)=e^x\, (g^{-1'}(x))=
+    Beweis: $f(x)=\ln x=g^{-1}(x)\ g(x)=e^x\ (g^{-1'}(x))=
     \frac{1}{(g(x))'(g^{-1}(x))}=\frac{1}{e^{\ln x}}=\frac{1}{x}$
-  \item $f(x)=h(x)^{g(x)}\, h>0$ differenzierbar und $g$ differenzierbar\\
+  \item $f(x)=h(x)^{g(x)}\ h>0$ differenzierbar und $g$ differenzierbar\\
     $f'(x)=h(x)^{g(x)}(\frac{h'(x)g(x)}{h(x)}+g'(x)\ln h(x))$\\
     Beweis: $(h(x)^{g(x)})'=(e^{g(x)\ln h(x)})'=e^{g(x)\ln h(x)}
     (g(x)\ln h(x))'$\\
@@ -2964,7 +2968,7 @@ $f,g\colon D\rightarrow\R$ sind $n$-mal differenzierbar. Dann $(f\circ g)^{(n)}
   $f\colon]a,b[\rightarrow\R$ besitze in $x\in ]a,b[$ ein lokales Extremum
   und sei in $x$ differenzierbar. Dann gilt $f'(x)=0$.\\
   \textbf{Beweis}: $f$ habe in $x$ ein lokales Maximum. Dann gilt:
-  \[\exists\varepsilon>0\colon D=]x-\varepsilon,x+\varepsilon[\subset]a,b[\,
+  \[\exists\varepsilon>0\colon D=]x-\varepsilon,x+\varepsilon[\subset]a,b[
   \forall\xi\in D\colon f(\xi)\leq f(x)\]
   Somit
   \begin{align*}
@@ -3027,7 +3031,7 @@ Folgerung:
     \Rightarrow f(x)=c$ konstant auf $[a,b]$\\
     Beweis: Sei $x\in]a,b]$ beliebig. Wir betrachten das Intervall $[a,x]$
     Nach dem Mittelwertsatz existiert ein $\xi\in]a,x[\subset]a,b[\colon
-    \frac{f(x)-f(a)}{x-a}=f'(\xi)=0\Rightarrow f(x)=f(a) \, \forall x\in
+    \frac{f(x)-f(a)}{x-a}=f'(\xi)=0\Rightarrow f(x)=f(a) \forall x\in
     ]a,b]\Rightarrow f(x)=f(a)\,\forall x\in[a,b]$ wegen der Stetigkeit.
   \item Sei $f\colon\R\rightarrow\R$ differenzierbar und genüge der
     Differentialgleichung $f'=f$ auf $\R$ mit $f(0)=1$. Dann ist
@@ -3092,7 +3096,7 @@ Beispiel: \[\lim_{x\rightarrow 0} \frac{e^x-1}{x}=\lim_{x\rightarrow 0}
   Dann besitzt $f$ in $x$ ein isoliertes lokales Extremum.\\
   \textbf{Beweis}: Sei $f''(x)>0$. Wegen $f''(x)=\lim_{\xi\rightarrow x}
   \frac{f'(\xi)-f'(x)}{\xi-x}>0\Rightarrow\exists\xi>0\colon
-  \frac{f'(\xi)-f'(x)}{\xi-x}>0 \,\forall\xi\colon0<|\xi-x|<\varepsilon$.
+  \frac{f'(\xi)-f'(x)}{\xi-x}>0 \forall\xi\colon0<|\xi-x|<\varepsilon$.
   Da $f'(x)=0$ ist, folgt $\frac{f'(\xi)}{\xi}>0\Rightarrow
   \left.
   \begin{array}{rcl}
@@ -3568,7 +3572,7 @@ Zur Untersuchung dieses Problems braucht man diverse Variablen:
     \item $\overline{S}(f;\ZZ')-\underline{S}(f;\ZZ')\leq \overline{S}(f;\ZZ)
       -\overline{S}(f;\ZZ)$\\
       \textit{Beweis}: Der Schluss folgt aus den obigen Aussagen.
-    \item $\forall \ZZ_1,\ZZ_2\, \underline{S}(f;\ZZ_1)\leq \overline{S}
+    \item $\forall \ZZ_1,\ZZ_2 \underline{S}(f;\ZZ_1)\leq \overline{S}
       (f;\ZZ_2)$\\
       \textit{Beweis}: Sei $\ZZ=\ZZ_1\prec \ZZ_2$. Dann ist $\underline{S}
       (f;\ZZ_1)\leq \underline{S}(f;\ZZ)\leq \overline{S}(f;\ZZ)\leq
@@ -3595,8 +3599,8 @@ Zur Untersuchung dieses Problems braucht man diverse Variablen:
 \begin{beispiel}
 $f(x)\coloneqq 
 \begin{cases}
-  1 & x\in [0,1], x\, \text{irrational}\\
-  0 & x\in [0,1], x\, \text{rational}
+  1 & x\in [0,1], x \text{ irrational}\\
+  0 & x\in [0,1], x \text{ rational}
 \end{cases} \in B[0,1]$
 
 Sei $\ZZ$ eine beliebige Zerlegung von $[0,1]$ und $I\in \ZZ$ ein Intervall.
@@ -3669,8 +3673,8 @@ Wegen $\underline{f}\leq f(\xi(I))\leq\overline{f}(I)$ gilt $\underline{S}
 
 \begin{theorem}
   Sei $f\in B[a,b]$. Dann ist $f$ genau dann R-integrierbar, wenn gilt:
-  \[\exists A\in\R\,\forall\varepsilon>0\,\exists\delta_\varepsilon>0\,
-  \forall\ZZ(d(\ZZ)<\delta_\varepsilon)\,\forall \xi(\xi\colon\ZZ\rightarrow
+  \[\exists A\in\R \forall\varepsilon>0 \exists\delta_\varepsilon>0
+  \forall\ZZ(d(\ZZ)<\delta_\varepsilon) \forall \xi(\xi\colon\ZZ\rightarrow
   [a,b])\colon|S(f;\ZZ;\xi)-A|\leq \varepsilon\]
 \end{theorem}
 
@@ -3759,8 +3763,8 @@ Funktion $f(x)=x^\alpha$.
 
 \begin{definition}
   Sei $f\in\RR[a,b]$ und $x_0\in[a,b]$. Dann heißt
-  \[F\colon[a,b]\rightarrow\R\text{ definiert durch } F(x)\coloneqq \int_{x_0}^x fdx\,
-  x\in[a,b]\]
+  \[F\colon[a,b]\rightarrow\R\text{ definiert durch } F(x)\coloneqq
+  \int_{x_0}^x fdx  x\in[a,b]\]
   \emph{unbestimmtes Integral\index{Integral!unbestimmtes}}.
 \end{definition}
 
